--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,13 +7,13 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"cwd": "${workspaceRoot}",
+			"cwd": "${workspaceRoot}/scratch/appNew7",
 			"sourceMaps": true,
 			"name": "Launch CLI (Node 6+)",
 			"program": "${workspaceRoot}/lib/nativescript-cli.js",
 
 			// example commands
-			"args": [ "create", "cliapp"]
+			"args": [ "livesync2", "android"]
 			// "args": [ "platform", "add", "android@1.3.0", "--path", "cliapp"]
 			// "args": [ "platform", "remove", "android", "--path", "cliapp"]
 			// "args": [ "plugin", "add", "nativescript-barcodescanner", "--path", "cliapp"]
