--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bufferpack": "0.0.6",
     "byline": "4.2.1",
     "chalk": "1.1.0",
-    "chokidar": "^1.6.1",
+    "chokidar": "1.7.0",
     "cli-table": "https://github.com/telerik/cli-table/tarball/v0.3.1.2",
     "clui": "0.3.1",
     "colors": "1.1.2",
@@ -40,6 +40,7 @@
     "filesize": "3.1.2",
     "gaze": "1.1.0",
     "glob": "^7.0.3",
+    "graceful-fs": "^4.1.11",
     "iconv-lite": "0.4.11",
     "inquirer": "0.9.0",
     "ios-device-lib": "0.4.1",
@@ -83,6 +84,7 @@
   "devDependencies": {
     "@types/chai": "3.4.34",
     "@types/chai-as-promised": "0.0.29",
+    "@types/chokidar": "1.6.0",
     "@types/lodash": "4.14.50",
     "@types/node": "6.0.61",
     "@types/qr-image": "3.2.0",
